crates/swc_css_parser/tests/errors/rome/invalid/page/space/output.stderr
error: Invalid selector
 --> $DIR/tests/errors/rome/invalid/page/space/input.css:3:14
  |
3 |     margin-left: 4cm;
  |                 ^

